--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: video_cache_server
 description: A Flutter package for caching video data through local proxy server.
 version: 0.0.1
-author:
-homepage:
+repository: https://github.com/dolphinxx/video_cache_server
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -11,8 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  path_provider: 1.6.14
-  http: 0.12.2
+  path_provider: ^1.6.4
+  http: ^0.12.0
 
 dev_dependencies:
   flutter_test:
