--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   path_provider: ^1.6.4
   http: ^0.12.0
+  pedantic: ^1.9.2
 
 dev_dependencies:
   flutter_test:
