--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   fijkplayer: 0.8.7
-  video_player: 2.0.0-nullsafety.2
+  video_player: 1.0.1
 
 
 dev_dependencies:
