--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,20 +4,21 @@ version: 0.0.1
 repository: https://github.com/dolphinxx/video_cache_server
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.17.0 <2.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  path_provider: ^1.6.4
-  http: ^0.12.0
-  pedantic: ^1.9.2
+  collection: 1.15.0
+  path_provider: ^2.0.1
+  http: ^0.13.1
+  pedantic: ^1.11.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  crypto: 2.1.5
+  crypto: 3.0.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
