--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,4 @@
-include: package:pedantic/analysis_options.yaml
+include: package:flutter_lints/flutter.yaml
 
 analyzer:
   exclude: [build/**,test_resources/**]
@@ -6,8 +6,8 @@ analyzer:
     implicit-casts: false
   errors:
     omit_local_variable_types: ignore
-  enable-experiment:
-    - non-nullable
 linter:
   rules:
-    - avoid_empty_else
+    avoid_empty_else: true
+    avoid_print: true
+    prefer_single_quotes: true
