--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,7 +6,7 @@ description: Demonstrates how to use the video_cache_server plugin.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -22,10 +22,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  fijkplayer: 0.8.7
-  video_player: 1.0.1
-
+  cupertino_icons: ^1.0.5
+  fijkplayer: 0.10.1
+  video_player: 2.4.7
+  path_provider: 2.0.11
 
 dev_dependencies:
   flutter_test:
