--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,15 +10,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  collection: 1.15.0
-  path_provider: ^2.0.1
-  http: ^0.13.1
-  pedantic: ^1.11.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   crypto: 3.0.1
+  flutter_lints: ^2.0.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
